--- a/app/pages/about.html
+++ b/app/pages/about.html
@@ -1,7 +1,13 @@
 @@include('../layout/header.html', {
 "title": "О компании",
-"switch": '<ul class=\"header__switch\"><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Главная</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/about.html\">О компании</a></li></ul>'
 })
+
+<div class="container">
+    <ul class="header__switch">
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/">Главная</a></li>
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/about.html">О компании</a></li>
+    </ul>
+</div>
 
 <div class="container">
     <div class="about">
@@ -17,16 +23,24 @@
             </div>
             <div class="about__text">
                 <p>
-                    ЛАНДШАФТНЫЙ ДОМ— студия ландшафтного дизайна, созданная в 2012 г. За годы работы спроектировано, в общей сложности, более 100 гектаров частных садов и общественных территорий. Реализовано более 35 проектов.
+                    ЛАНДШАФТНЫЙ ДОМ— студия ландшафтного дизайна, созданная в 2012 г. За годы работы спроектировано, в
+                    общей сложности, более 100 гектаров частных садов и общественных территорий. Реализовано более 35
+                    проектов.
                 </p>
                 <p>
-                    Ландшафтный дизайн для нас – это искусство, объединившее в себе архитектуру, дендрологию, инженерное проектирование, цветоводство, культуру, историю и многие другие области знаний. Поэтому в нашей команде так много разных высококвалифицированных специалистов: архитекторов, дизайнеров, инженеров, ученых.
+                    Ландшафтный дизайн для нас – это искусство, объединившее в себе архитектуру, дендрологию, инженерное
+                    проектирование, цветоводство, культуру, историю и многие другие области знаний. Поэтому в нашей
+                    команде так много разных высококвалифицированных специалистов: архитекторов, дизайнеров, инженеров,
+                    ученых.
                 </p>
                 <p>
-                    Ландшафтный дизайн для нас – это одновременно и вдохновенный порыв художника и кропотливый, вдумчивый труд инженера. Мы объединили свои знания для создания функционального, комфортного и устойчивого во времени дизайна.
+                    Ландшафтный дизайн для нас – это одновременно и вдохновенный порыв художника и кропотливый,
+                    вдумчивый труд инженера. Мы объединили свои знания для создания функционального, комфортного и
+                    устойчивого во времени дизайна.
                 </p>
                 <p>
-                    Мы умеем работать с любыми задачами, с любыми бюджетами и сроками. Мы умеем визуализировать Ваши мечты. Выбирайте лучшее, сотрудничайте с нами!
+                    Мы умеем работать с любыми задачами, с любыми бюджетами и сроками. Мы умеем визуализировать Ваши
+                    мечты. Выбирайте лучшее, сотрудничайте с нами!
                 </p>
             </div>
         </div>
@@ -363,7 +377,7 @@
                 </li>
             </ul>
         </div>
-    </section> 
+    </section>
 
     <section class="employee">
         <div class="section__title employee__title">
@@ -421,7 +435,7 @@
                 </li>
             </ul>
         </div>
-    </section> 
+    </section>
 
     @@include('../sections/question-form.html')
 </div>
