--- a/app/pages/article.html
+++ b/app/pages/article.html
@@ -1,7 +1,15 @@
 @@include('../layout/header.html', {
 "title": "Ландшафт",
-"switch": '<ul class=\"header__switch\"><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Главная</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/blog.html\">Блог</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/blog.html\">Статьи</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Современный сад</a></li></ul>'
 })
+
+<div class="container">
+    <ul class="header__switch">
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/">Главная</a></li>
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/blog.html">Блог</a></li>
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/blog.html">Статьи</a></li>
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/">Современный сад</a></li>
+    </ul>
+</div>
 
 <section class="portfolio">
     <div class="container">
@@ -104,11 +112,19 @@
                     Современный сад. Что изменилось спустя века развития садового искусства?
                 </div>
                 <p class="article__text">
-                    Тысячелетиями земельные участки видоизменялись. Ландшафтный дизайн сада в нынешнее время – кропотливый труд. Связано это с повреждениями почвы и природной растительности. Человеческая деятельность привела к оскудению естественных ландшафтов. Особенно это выражено в городской среде. Строительные и монтажные работы вредят плодородному слою земли и растениям.
+                    Тысячелетиями земельные участки видоизменялись. Ландшафтный дизайн сада в нынешнее время –
+                    кропотливый труд. Связано это с повреждениями почвы и природной растительности. Человеческая
+                    деятельность привела к оскудению естественных ландшафтов. Особенно это выражено в городской среде.
+                    Строительные и монтажные работы вредят плодородному слою земли и растениям.
                 </p>
                 <div class="article__flex">
                     <p class="article__text">
-                        В современном саду перед тем, как проектировать ландшафтный дизайн участка ведутся восстановительные работы. Благоустройство природного массива тесно связано с сохранением естественно произрастающей растительности, гидрографической сети, рельефа, почв. Одним из современных подходов к дизайну является «растворение» дома в окружающей природе. Ландшафтный дизайн садового участка спроектирован так, будто дом висит на склоне или деликатно окутан ветвями деревьев. Тем самым дом «сливается» с природой, является ее частью.
+                        В современном саду перед тем, как проектировать ландшафтный дизайн участка ведутся
+                        восстановительные работы. Благоустройство природного массива тесно связано с сохранением
+                        естественно произрастающей растительности, гидрографической сети, рельефа, почв. Одним из
+                        современных подходов к дизайну является «растворение» дома в окружающей природе. Ландшафтный
+                        дизайн садового участка спроектирован так, будто дом висит на склоне или деликатно окутан
+                        ветвями деревьев. Тем самым дом «сливается» с природой, является ее частью.
                     </p>
                     <div class="article__image">
                         <img src="/img/article-1.png" alt="">
@@ -120,10 +136,15 @@
                     </div>
                     <div class="article__text">
                         <p>
-                            Спроектированный ландшафтный дизайн участка – сохранение природной среды. В основе современного сада лежит воссоздание или имитация природного рельефа, восстановление почвы и приумножение существующей растительности.
+                            Спроектированный ландшафтный дизайн участка – сохранение природной среды. В основе
+                            современного сада лежит воссоздание или имитация природного рельефа, восстановление почвы и
+                            приумножение существующей растительности.
                         </p>
                         <p>
-                            В ландшафтном дизайне участка ничего не пропадает. Опавшая листва, ветки, скошенная трава компостируются для естественного удобрения почвы. В низинах рельефа устраиваются водосборы для талой и дождевой воды. В них можно устраивать водоемы с влаголюбивыми растениями. При помощи валунов и камней водоемы преображают в произведения искусства.
+                            В ландшафтном дизайне участка ничего не пропадает. Опавшая листва, ветки, скошенная трава
+                            компостируются для естественного удобрения почвы. В низинах рельефа устраиваются водосборы
+                            для талой и дождевой воды. В них можно устраивать водоемы с влаголюбивыми растениями. При
+                            помощи валунов и камней водоемы преображают в произведения искусства.
                         </p>
                     </div>
                 </div>
@@ -132,10 +153,13 @@
                 </div>
                 <div class="article__text">
                     <p>
-                        Выйти на террасу с чашкой кофе или ароматного чая, сесть в любимое кресло и под чириканье птиц наслаждаться солнцем – это ли ни счастье для горожанина?
+                        Выйти на террасу с чашкой кофе или ароматного чая, сесть в любимое кресло и под чириканье птиц
+                        наслаждаться солнцем – это ли ни счастье для горожанина?
                     </p>
                     <p>
-                        Основной чертой современного ландшафтного дизайна садового участка и основой композиции является природа и ее сохранность. Однако удобство и комфорт — сопутствующие атрибуты. Минимализм в декоративном оформлении современного сада умиротворяет.
+                        Основной чертой современного ландшафтного дизайна садового участка и основой композиции является
+                        природа и ее сохранность. Однако удобство и комфорт — сопутствующие атрибуты. Минимализм в
+                        декоративном оформлении современного сада умиротворяет.
                     </p>
                 </div>
                 <div class="article__flex">
@@ -143,12 +167,18 @@
                         <img src="/img/article-3.png" alt="">
                     </div>
                     <p class="article__text">
-                        Парадная зона может быть оформлена зелеными растениями, кустарниками и деревьями, яркими садовыми акцентами. Ведь это визитная карточка садового участка и статусная окантовка главного фасада дома.
+                        Парадная зона может быть оформлена зелеными растениями, кустарниками и деревьями, яркими
+                        садовыми акцентами. Ведь это визитная карточка садового участка и статусная окантовка главного
+                        фасада дома.
                     </p>
                 </div>
                 <div class="article__flex">
                     <p class="article__text">
-                        Внутренний двор участка — это пространство для уединения. Здесь, чаще всего, преобладает сдержанная гамма растительности. Зона для отдыха будто скрыта в зеленой комнате. Мощеные площадки сменяются дорожками из песка и гравия. Водоемы, фонтаны, скамейки, садовые скульптуры, беседки позволяют отвлечься, созерцать, поддаться раздумьям. Весьма отдаленно, современный сад напоминает японский стиль — непринужденная атмосфера, водоем, камень, зелень, тишина.
+                        Внутренний двор участка — это пространство для уединения. Здесь, чаще всего, преобладает
+                        сдержанная гамма растительности. Зона для отдыха будто скрыта в зеленой комнате. Мощеные
+                        площадки сменяются дорожками из песка и гравия. Водоемы, фонтаны, скамейки, садовые скульптуры,
+                        беседки позволяют отвлечься, созерцать, поддаться раздумьям. Весьма отдаленно, современный сад
+                        напоминает японский стиль — непринужденная атмосфера, водоем, камень, зелень, тишина.
                     </p>
                     <div class="article__image">
                         <img src="/img/article-4.png" alt="">
