--- a/app/pages/awards.html
+++ b/app/pages/awards.html
@@ -1,7 +1,14 @@
 @@include('../layout/header.html', {
 "title": "Ландшафт",
-"switch": '<ul class=\"header__switch\"><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Главная</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">О компании</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Награды</a></li></ul>'
 })
+
+<div class="container">
+    <ul class="header__switch">
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/">Главная</a></li>
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/">О компании</a></li>
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/">Награды</a></li>
+    </ul>
+</div>
 
 <div class="container">
     <section class="awards">
@@ -58,7 +65,8 @@
                 <li class="awards__item">
                     <div class="section__title awards__title">
                         <h2 class="awards__h2">
-                            “Мы каждый день улучшаем свои навыки и становимся лучше, чтобы наш сервис всегда оставался на высоте!”
+                            “Мы каждый день улучшаем свои навыки и становимся лучше, чтобы наш сервис всегда оставался
+                            на высоте!”
                         </h2>
                         <div class="section__title_line"></div>
                     </div>
