--- a/app/pages/catalog-select.html
+++ b/app/pages/catalog-select.html
@@ -1,10 +1,26 @@
 @@include('../layout/header.html', {
-"title": "Ландшафт",
-"switch": '<ul class=\"header__switch\"><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Главная</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/catalog.html\">Каталог растений</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/catalog-select.html.html\">Хвойные растения</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/product.html\">Ель обыкновенная</a></li></ul>'
+"title": "Ландшафт"
 })
 
 <div class="container">
-    <section class="popular">
+    <ul class="header__switch">
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/">Главная</a>
+        </li>
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/catalog.html">Каталог растений</a>
+        </li>
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/catalog-select.html.html">Хвойные растения</a>
+        </li>
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/product.html">Ель обыкновенная</a>
+        </li>
+    </ul>
+</div>
+
+<div class="container">
+    <section class="popular _catalog">
         <div class="section__title popular__title">
             <div class="section__title_line"></div>
             <h2 class="popular__h2">
@@ -17,9 +33,11 @@
                     <span>
                         Род растения
                     </span>
-                    <svg width="0.437rem" height="1.06rem" viewBox="0 0 7 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3.5 12.6536L6 12.6536L3.5 16L1 12.6536L3.5 12.6536ZM3.5 12.6536L3.5 -1.09278e-07" stroke="#343434"/>
-                    </svg>                        
+                    <svg width="0.437rem" height="1.06rem" viewBox="0 0 7 17" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3.5 12.6536L6 12.6536L3.5 16L1 12.6536L3.5 12.6536ZM3.5 12.6536L3.5 -1.09278e-07"
+                            stroke="#343434" />
+                    </svg>
                 </div>
                 <ul class="popular__sort_select"></ul>
             </li>
@@ -28,9 +46,11 @@
                     <span>
                         Цена
                     </span>
-                    <svg width="0.437rem" height="1.06rem" viewBox="0 0 7 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3.5 12.6536L6 12.6536L3.5 16L1 12.6536L3.5 12.6536ZM3.5 12.6536L3.5 -1.09278e-07" stroke="#343434"/>
-                    </svg>                        
+                    <svg width="0.437rem" height="1.06rem" viewBox="0 0 7 17" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3.5 12.6536L6 12.6536L3.5 16L1 12.6536L3.5 12.6536ZM3.5 12.6536L3.5 -1.09278e-07"
+                            stroke="#343434" />
+                    </svg>
                 </div>
                 <ul class="popular__sort_select"></ul>
             </li>
@@ -39,9 +59,11 @@
                     <span>
                         Размер, см
                     </span>
-                    <svg width="0.437rem" height="1.06rem" viewBox="0 0 7 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3.5 12.6536L6 12.6536L3.5 16L1 12.6536L3.5 12.6536ZM3.5 12.6536L3.5 -1.09278e-07" stroke="#343434"/>
-                    </svg>                        
+                    <svg width="0.437rem" height="1.06rem" viewBox="0 0 7 17" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3.5 12.6536L6 12.6536L3.5 16L1 12.6536L3.5 12.6536ZM3.5 12.6536L3.5 -1.09278e-07"
+                            stroke="#343434" />
+                    </svg>
                 </div>
                 <ul class="popular__sort_select"></ul>
             </li>
@@ -50,9 +72,11 @@
                     <span>
                         Семейство растения
                     </span>
-                    <svg width="0.437rem" height="1.06rem" viewBox="0 0 7 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3.5 12.6536L6 12.6536L3.5 16L1 12.6536L3.5 12.6536ZM3.5 12.6536L3.5 -1.09278e-07" stroke="#343434"/>
-                    </svg>                        
+                    <svg width="0.437rem" height="1.06rem" viewBox="0 0 7 17" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3.5 12.6536L6 12.6536L3.5 16L1 12.6536L3.5 12.6536ZM3.5 12.6536L3.5 -1.09278e-07"
+                            stroke="#343434" />
+                    </svg>
                 </div>
                 <ul class="popular__sort_select"></ul>
             </li>
@@ -61,9 +85,11 @@
                     <span>
                         Тип материала
                     </span>
-                    <svg width="0.437rem" height="1.06rem" viewBox="0 0 7 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3.5 12.6536L6 12.6536L3.5 16L1 12.6536L3.5 12.6536ZM3.5 12.6536L3.5 -1.09278e-07" stroke="#343434"/>
-                    </svg>                        
+                    <svg width="0.437rem" height="1.06rem" viewBox="0 0 7 17" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3.5 12.6536L6 12.6536L3.5 16L1 12.6536L3.5 12.6536ZM3.5 12.6536L3.5 -1.09278e-07"
+                            stroke="#343434" />
+                    </svg>
                 </div>
                 <ul class="popular__sort_select"></ul>
             </li>
@@ -72,9 +98,11 @@
                     <span>
                         Упаковка
                     </span>
-                    <svg width="0.437rem" height="1.06rem" viewBox="0 0 7 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M3.5 12.6536L6 12.6536L3.5 16L1 12.6536L3.5 12.6536ZM3.5 12.6536L3.5 -1.09278e-07" stroke="#343434"/>
-                    </svg>                        
+                    <svg width="0.437rem" height="1.06rem" viewBox="0 0 7 17" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3.5 12.6536L6 12.6536L3.5 16L1 12.6536L3.5 12.6536ZM3.5 12.6536L3.5 -1.09278e-07"
+                            stroke="#343434" />
+                    </svg>
                 </div>
                 <ul class="popular__sort_select"></ul>
             </li>
@@ -231,8 +259,9 @@
         </div>
         <div class="popular__more">
             <svg width="0.81rem" height="3.5rem" viewBox="0 0 13 56" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M6.5 47.0721L0.999998 47.0721L6.5 55L12 47.0721L6.5 47.0721ZM6.5 47.0721L6.5 -2.40413e-07" stroke="#343434"/>
-            </svg>                
+                <path d="M6.5 47.0721L0.999998 47.0721L6.5 55L12 47.0721L6.5 47.0721ZM6.5 47.0721L6.5 -2.40413e-07"
+                    stroke="#343434" />
+            </svg>
         </div>
         <div class="popular__buttons">
             <button class="button popular__button">
@@ -280,7 +309,7 @@
 
 <div class="container">
     <section class="products">
-        <div class="section__title products__title"> 
+        <div class="section__title products__title">
             <div class="section__title_line"></div>
             <h2 class="products__h2">
                 Популярные услуги
@@ -406,8 +435,8 @@
             </li>
         </ul>
         <a class="products__button button" href="">
-            Посмотреть все услуги  
-        </a> 
+            Посмотреть все услуги
+        </a>
     </section>
 
     <section class="price">
