--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,6 +1,5 @@
 @@include('../layout/header.html', {
-"title": "Ландшафт",
-"switch": ""
+    "title": "Ландшафт"
 })
 
 <div class="container">
@@ -15,7 +14,7 @@
             <div class="section__title landscape-solutions__title">
                 <h2 class="section__title_h2">
                     Индивидуальные ландшафтные решения
-                    для самых взыскательных клиентов.
+                    для самых взыскательных клиентов
                 </h2>
                 <div class="landscape-solutions__title_line section__title_line"></div>
                 <button class="landscape-solutions__request button">
@@ -63,7 +62,7 @@
                 </button>
             </div>
             <div class="landscape__image">
-                <img src="/img/general-manager.png" alt="Евгений Джелемей">
+                <img src="/img/avatar_photo.png" alt="Евгений Джелемей">
             </div>
         </div>
     </section>
@@ -587,19 +586,19 @@
                 </h2>
             </div>
             <div class="advantages__content">
-                <div class="advantages__content_left">
+                <div class="advantages__content_left advantages__text-rotate">
                     Свой автопарк для перевозки
                 </div>
                 <div class="advantages__content_right">
                     <div class="advantages__content_right_left">
-                        <p>
+                        <p class="advantages__text-rotate">
                             Более 500 видов растений
                         </p>
-                        <p>
+                        <p class="advantages__text-rotate">
                             Весь товар сертифицирован
                         </p>
                     </div>
-                    <div class="advantages__content_right_right">
+                    <div class="advantages__content_right_right advantages__text-rotate">
                         <p>
                             10 лет на рынке
                         </p>
