--- a/app/pages/payment.html
+++ b/app/pages/payment.html
@@ -1,7 +1,14 @@
 @@include('../layout/header.html', {
-"title": "Ландшафт",
-"switch": '<ul class=\"header__switch\"><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Главная</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">О компании</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Оплата</a></li></ul>'
+    "title": "Ландшафт"
 })
+
+<div class="cotainer">
+    <ul class="header__switch">
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/">Главная</a></li>
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/about.html">О компании</a></li>
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/payment.html">Оплата</a></li>
+    </ul>
+</div>
 
 <div class="container">
     <section class="awards">
@@ -12,7 +19,8 @@
             </h2>
         </div>
         <div class="awards__subtitle">
-            Компания “Ландшафтный Дом” делает все для безопасности и экономии драгоценного времени наших клиентов. Мы предлагаем самые быстрые и безопасные решения по оплате наших услуг, а также наилучшие решения любых споров.
+            Компания “Ландшафтный Дом” делает все для безопасности и экономии драгоценного времени наших клиентов. Мы
+            предлагаем самые быстрые и безопасные решения по оплате наших услуг, а также наилучшие решения любых споров.
         </div>
         <div class="awards__list">
             <ul class="awards__list_inner">
@@ -26,7 +34,8 @@
                         </div>
                         <div class="awards__item_description">
                             <span>
-                                Наша задача - обеспечить максимальную безопасность и комфорт наших клиентов, поэтому мы предлагаем гибкие условия оплаты и инкассацию денежной наличности.
+                                Наша задача - обеспечить максимальную безопасность и комфорт наших клиентов, поэтому мы
+                                предлагаем гибкие условия оплаты и инкассацию денежной наличности.
                             </span>
                         </div>
                     </div>
@@ -41,7 +50,8 @@
                         </div>
                         <div class="awards__item_description">
                             <span>
-                                Хотите сделать всё максимально быстро или передать оплату услуг своему персональному менеджеру? Мы позаботились об этом. Теперь мы можем принимать безналичный расчёт!
+                                Хотите сделать всё максимально быстро или передать оплату услуг своему персональному
+                                менеджеру? Мы позаботились об этом. Теперь мы можем принимать безналичный расчёт!
                             </span>
                         </div>
                     </div>
@@ -56,7 +66,8 @@
                         </div>
                         <div class="awards__item_description">
                             <span>
-                                Оплата картой - один из самых быстрых и удобных способов. Мы предлагаем полную анонимность и безопасность.
+                                Оплата картой - один из самых быстрых и удобных способов. Мы предлагаем полную
+                                анонимность и безопасность.
                             </span>
                         </div>
                     </div>
@@ -73,7 +84,8 @@
             </h2>
         </div>
         <div class="awards__subtitle">
-            Мы всегда заботимся об безопасности, анонимности и комфорте наших клиентов. Мы предлагаем самые быстрые и качественные способы решения любых споров и возвратов денежных сресдтв.
+            Мы всегда заботимся об безопасности, анонимности и комфорте наших клиентов. Мы предлагаем самые быстрые и
+            качественные способы решения любых споров и возвратов денежных сресдтв.
         </div>
         <div class="awards__list">
             <ul class="awards__list_inner">
@@ -87,7 +99,9 @@
                         </div>
                         <div class="awards__item_description">
                             <span>
-                                При оплате наличными Ваши средства в безопасности будут возвращены в Ваш банк или по согласованному с Вами месту. Мы сделаем всё сами, Вам остается только наслждаться спокойствием и надежностью.
+                                При оплате наличными Ваши средства в безопасности будут возвращены в Ваш банк или по
+                                согласованному с Вами месту. Мы сделаем всё сами, Вам остается только наслждаться
+                                спокойствием и надежностью.
                             </span>
                         </div>
                     </div>
@@ -102,7 +116,8 @@
                         </div>
                         <div class="awards__item_description">
                             <span>
-                                При оплате картой мы делаем всё возможное, чтобы банк сделал возврат средств как можно быстрее. Мы сотрудничаем с банком и всегда на Вашей стороне. Мы заполним всё за Вас.
+                                При оплате картой мы делаем всё возможное, чтобы банк сделал возврат средств как можно
+                                быстрее. Мы сотрудничаем с банком и всегда на Вашей стороне. Мы заполним всё за Вас.
                             </span>
                         </div>
                     </div>
