--- a/app/pages/product.html
+++ b/app/pages/product.html
@@ -1,7 +1,23 @@
 @@include('../layout/header.html', {
-"title": "Ландшафт",
-"switch": '<ul class=\"header__switch\"><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Главная</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/catalog.html\">Каталог растений</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/catalog-select.html\">Хвойные растения</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/product.html\">Ель обыкновенная</a></li></ul>'
+    "title": "Ландшафт"
 })
+
+<div class="container">
+    <ul class="header__switch">
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/">Главная</a>
+        </li>
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/catalog.html">Каталог растений</a>
+        </li>
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/catalog-select.html">Хвойные растения</a>
+        </li>
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/product.html">Ель обыкновенная</a>
+        </li>
+    </ul>
+</div>
 
 <div class="container">
     <section class="product-shop">
@@ -14,22 +30,27 @@
         <div class="product-shop__application">
             <div class="product-shop__application_favorite">
                 <svg width="27" height="26" viewBox="0 0 27 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M3.07844 14.4388L11.2717 23.528C12.4632 24.8498 14.5368 24.8498 15.7283 23.528L23.9216 14.4388C26.6928 11.3645 26.6928 6.38003 23.9216 3.30573C21.1503 0.231423 16.6572 0.231425 13.886 3.30573V3.30573C13.6796 3.53469 13.3204 3.53469 13.114 3.30573V3.30573C10.3428 0.231425 5.84969 0.231424 3.07844 3.30573C0.307187 6.38003 0.307189 11.3645 3.07844 14.4388Z" stroke="#343434" stroke-width="2"/>
+                    <path
+                        d="M3.07844 14.4388L11.2717 23.528C12.4632 24.8498 14.5368 24.8498 15.7283 23.528L23.9216 14.4388C26.6928 11.3645 26.6928 6.38003 23.9216 3.30573C21.1503 0.231423 16.6572 0.231425 13.886 3.30573V3.30573C13.6796 3.53469 13.3204 3.53469 13.114 3.30573V3.30573C10.3428 0.231425 5.84969 0.231424 3.07844 3.30573C0.307187 6.38003 0.307189 11.3645 3.07844 14.4388Z"
+                        stroke="#343434" stroke-width="2" />
                 </svg>
                 <span>
-                    В избранное 
-                </span>                    
+                    В избранное
+                </span>
             </div>
             <div class="product-shop__application_comparison">
                 <svg width="27" height="25" viewBox="0 0 27 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M25.9973 1.28418L12.1094 1.28418" stroke="#343434" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    <ellipse rx="2.77758" ry="2.85714" transform="matrix(-1 0 0 1 3.7771 6.85714)" stroke="#343434" stroke-width="1.5"/>
-                    <path d="M1.0027 15.0313L14.8906 15.0312" stroke="#343434" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    <ellipse cx="23.2229" cy="21.1423" rx="2.77758" ry="2.85714" stroke="#343434" stroke-width="1.5"/>
+                    <path d="M25.9973 1.28418L12.1094 1.28418" stroke="#343434" stroke-width="1.5"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                    <ellipse rx="2.77758" ry="2.85714" transform="matrix(-1 0 0 1 3.7771 6.85714)" stroke="#343434"
+                        stroke-width="1.5" />
+                    <path d="M1.0027 15.0313L14.8906 15.0312" stroke="#343434" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    <ellipse cx="23.2229" cy="21.1423" rx="2.77758" ry="2.85714" stroke="#343434" stroke-width="1.5" />
                 </svg>
                 <span>
                     Сравнить
-                </span>                    
+                </span>
             </div>
         </div>
         <div class="product-shop__short-info">
@@ -61,12 +82,15 @@
                         Артикул: Я00097
                     </div>
                     <div class="raiting">
-                        <svg width="1.87rem" height="1.75rem" viewBox="0 0 30 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M15 0L18.3677 10.3647H29.2658L20.4491 16.7705L23.8168 27.1353L15 20.7295L6.18322 27.1353L9.55093 16.7705L0.734152 10.3647H11.6323L15 0Z" fill="#FFD340"/>
+                        <svg width="1.87rem" height="1.75rem" viewBox="0 0 30 28" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M15 0L18.3677 10.3647H29.2658L20.4491 16.7705L23.8168 27.1353L15 20.7295L6.18322 27.1353L9.55093 16.7705L0.734152 10.3647H11.6323L15 0Z"
+                                fill="#FFD340" />
                         </svg>
                         <div class="raiting__text">
                             5
-                        </div>                           
+                        </div>
                     </div>
                 </div>
                 <div>
@@ -236,13 +260,21 @@
             <div class="product-shop__info_text">
                 <div class="product-shop__info_text_inner _active" data-info-type="description">
                     <p>
-                        Небольшое деревце или крупный кустарник высотой до 3–5 м с несимметричной густо разветвлённой кроной. Растёт довольно медленно. Кора старых ветвей светло-серая, молодые ветки красновато-коричневые; немногочисленные тонкие, острые колючки до 2,5 см длиной.
+                        Небольшое деревце или крупный кустарник высотой до 3–5 м с несимметричной густо разветвлённой
+                        кроной. Растёт довольно медленно. Кора старых ветвей светло-серая, молодые ветки
+                        красновато-коричневые; немногочисленные тонкие, острые колючки до 2,5 см длиной.
                     </p>
                     <p>
-                        Листья голые, обратнояйцевидные, до 6 см длиной, цельные или 3–5-лопастные, ярко-зелёные, блестящие, осенью жёлтые или жёлто-оранжевые. Цветки диаметром до 1,5 см, белые, бутоны и иногда лепестки с лёгким розоватым оттенком, в небольших редких щитковидных соцветиях.
+                        Листья голые, обратнояйцевидные, до 6 см длиной, цельные или 3–5-лопастные, ярко-зелёные,
+                        блестящие, осенью жёлтые или жёлто-оранжевые. Цветки диаметром до 1,5 см, белые, бутоны и иногда
+                        лепестки с лёгким розоватым оттенком, в небольших редких щитковидных соцветиях.
                     </p>
                     <p>
-                        Цветёт около 2 недель в V–VI. Плоды округлые, диаметром чуть более 1 см, буровато-красные или красные, с жёлтой мякотью и 2–3 косточками, съедобные, созревают в VIII. Растёт в редких лиственных и сосновых лесах, по опушкам, в кустарниковых зарослях, вдоль рек и на осыпях в горах до 1700 м высоты в Западной Европе от юга Скандинавии и Британии до Закарпатья. Широко распространён в культуре, испытан до Москвы и Санкт-Петербурга включительно, легко дичает.
+                        Цветёт около 2 недель в V–VI. Плоды округлые, диаметром чуть более 1 см, буровато-красные или
+                        красные, с жёлтой мякотью и 2–3 косточками, съедобные, созревают в VIII. Растёт в редких
+                        лиственных и сосновых лесах, по опушкам, в кустарниковых зарослях, вдоль рек и на осыпях в горах
+                        до 1700 м высоты в Западной Европе от юга Скандинавии и Британии до Закарпатья. Широко
+                        распространён в культуре, испытан до Москвы и Санкт-Петербурга включительно, легко дичает.
                     </p>
                 </div>
                 <div class="product-shop__info_text_inner" data-info-type="specifications">
@@ -472,6 +504,54 @@
                             </svg>
                         </div>
                         <div class="popular__item_image">
+                            <img src="/img/linden-american.png" alt="Липа американская">
+                        </div>
+                        <div class="popular__item_content">
+                            <div class="popular__item_flex">
+                                <div class="popular__item_article">
+                                    Артикул: 666
+                                </div>
+                                <div class="popular__item_raiting">
+                                    <svg width="1.87rem" height="1.75rem" viewBox="0 0 30 28" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M15 0L18.3677 10.3647H29.2658L20.4491 16.7705L23.8168 27.1353L15 20.7295L6.18322 27.1353L9.55093 16.7705L0.734152 10.3647H11.6323L15 0Z"
+                                            fill="#FFD340" />
+                                    </svg>
+                                    <span>
+                                        5
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="popular__item_title">
+                                Липа американская шар на штамбе
+                            </div>
+                            <div class="popular__item_price">
+                                Цена: 66 666 ₽
+                            </div>
+                            <div class="popular__item_flex">
+                                <button class="popular__item_card-add button">
+                                    В корзину
+                                </button>
+                                <svg width="1.87rem" height="1.87rem" viewBox="0 0 30 30" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M16.5 9.20526C17.775 8.73158 18.795 7.6579 19.245 6.31579H24L19.5 17.3684C19.5 19.9895 21.855 22.1053 24.75 22.1053C27.645 22.1053 30 19.9895 30 17.3684L25.5 6.31579H28.5V3.15789H19.245C18.63 1.31053 16.965 0 15 0C13.035 0 11.37 1.31053 10.755 3.15789H1.5V6.31579H4.5L0 17.3684C0 19.9895 2.355 22.1053 5.25 22.1053C8.145 22.1053 10.5 19.9895 10.5 17.3684L6 6.31579H10.755C11.205 7.6579 12.225 8.73158 13.5 9.20526V26.8421H0V30H30V26.8421H16.5V9.20526ZM27.555 17.3684H21.945L24.75 10.4842L27.555 17.3684ZM8.055 17.3684H2.445L5.25 10.4842L8.055 17.3684ZM15 6.31579C14.175 6.31579 13.5 5.60526 13.5 4.73684C13.5 3.86842 14.175 3.15789 15 3.15789C15.825 3.15789 16.5 3.86842 16.5 4.73684C16.5 5.60526 15.825 6.31579 15 6.31579Z"
+                                        fill="var(--second-color)" />
+                                </svg>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="popular__item">
+                        <div class="popular__item_favorite">
+                            <svg width="1.69rem" height="1.6rem" viewBox="0 0 27 26" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M3.07844 14.4388L11.2717 23.528C12.4632 24.8498 14.5368 24.8498 15.7283 23.528L23.9216 14.4388C26.6928 11.3645 26.6928 6.38003 23.9216 3.30573C21.1503 0.231423 16.6572 0.231425 13.886 3.30573V3.30573C13.6796 3.53469 13.3204 3.53469 13.114 3.30573V3.30573C10.3428 0.231425 5.84969 0.231424 3.07844 3.30573C0.307187 6.38003 0.307189 11.3645 3.07844 14.4388Z"
+                                    stroke="var(--third-color)" stroke-width="2" />
+                            </svg>
+                        </div>
+                        <div class="popular__item_image">
                             <img src="/img/hawthorn-common.png" alt="Боярышник обыкновенный">
                         </div>
                         <div class="popular__item_content">
@@ -496,6 +576,54 @@
                             </div>
                             <div class="popular__item_price">
                                 Цена: 8 100 ₽
+                            </div>
+                            <div class="popular__item_flex">
+                                <button class="popular__item_card-add button">
+                                    В корзину
+                                </button>
+                                <svg width="1.87rem" height="1.87rem" viewBox="0 0 30 30" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M16.5 9.20526C17.775 8.73158 18.795 7.6579 19.245 6.31579H24L19.5 17.3684C19.5 19.9895 21.855 22.1053 24.75 22.1053C27.645 22.1053 30 19.9895 30 17.3684L25.5 6.31579H28.5V3.15789H19.245C18.63 1.31053 16.965 0 15 0C13.035 0 11.37 1.31053 10.755 3.15789H1.5V6.31579H4.5L0 17.3684C0 19.9895 2.355 22.1053 5.25 22.1053C8.145 22.1053 10.5 19.9895 10.5 17.3684L6 6.31579H10.755C11.205 7.6579 12.225 8.73158 13.5 9.20526V26.8421H0V30H30V26.8421H16.5V9.20526ZM27.555 17.3684H21.945L24.75 10.4842L27.555 17.3684ZM8.055 17.3684H2.445L5.25 10.4842L8.055 17.3684ZM15 6.31579C14.175 6.31579 13.5 5.60526 13.5 4.73684C13.5 3.86842 14.175 3.15789 15 3.15789C15.825 3.15789 16.5 3.86842 16.5 4.73684C16.5 5.60526 15.825 6.31579 15 6.31579Z"
+                                        fill="var(--second-color)" />
+                                </svg>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="popular__item">
+                        <div class="popular__item_favorite">
+                            <svg width="1.69rem" height="1.6rem" viewBox="0 0 27 26" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M3.07844 14.4388L11.2717 23.528C12.4632 24.8498 14.5368 24.8498 15.7283 23.528L23.9216 14.4388C26.6928 11.3645 26.6928 6.38003 23.9216 3.30573C21.1503 0.231423 16.6572 0.231425 13.886 3.30573V3.30573C13.6796 3.53469 13.3204 3.53469 13.114 3.30573V3.30573C10.3428 0.231425 5.84969 0.231424 3.07844 3.30573C0.307187 6.38003 0.307189 11.3645 3.07844 14.4388Z"
+                                    stroke="var(--third-color)" stroke-width="2" />
+                            </svg>
+                        </div>
+                        <div class="popular__item_image">
+                            <img src="/img/linden-american.png" alt="Липа американская">
+                        </div>
+                        <div class="popular__item_content">
+                            <div class="popular__item_flex">
+                                <div class="popular__item_article">
+                                    Артикул: 666
+                                </div>
+                                <div class="popular__item_raiting">
+                                    <svg width="1.87rem" height="1.75rem" viewBox="0 0 30 28" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M15 0L18.3677 10.3647H29.2658L20.4491 16.7705L23.8168 27.1353L15 20.7295L6.18322 27.1353L9.55093 16.7705L0.734152 10.3647H11.6323L15 0Z"
+                                            fill="#FFD340" />
+                                    </svg>
+                                    <span>
+                                        5
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="popular__item_title">
+                                Липа американская шар на штамбе
+                            </div>
+                            <div class="popular__item_price">
+                                Цена: 66 666 ₽
                             </div>
                             <div class="popular__item_flex">
                                 <button class="popular__item_card-add button">
