--- a/app/pages/project.html
+++ b/app/pages/project.html
@@ -1,7 +1,20 @@
 @@include('../layout/header.html', {
-"title": "Ландшафт",
-"switch": '<ul class=\"header__switch\"><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Главная</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/portfolio.html\">Портфолио</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/project.html\">Посёлок Оскол</a></li></ul>'
+    "title": "Ландшафт"
 })
+
+<div class="container">
+    <ul class="header__switch">
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/">Главная</a>
+        </li>
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/portfolio.html">Портфолио</a>
+        </li>
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/project.html">Посёлок Оскол</a>
+        </li>
+    </ul>
+</div>
 
 <div class="project pb-12-5-rem">
     <section class="portfolio">
