--- a/app/pages/services-select.html
+++ b/app/pages/services-select.html
@@ -1,7 +1,20 @@
 @@include('../layout/header.html', {
-"title": "Ландшафт",
-"switch": '<ul class=\"header__switch\">\n    <li class=\"header__switch_item\">\n        <a class=\"header__switch_item_href\" href=\"/\">\n            Главная\n        </a>\n    </li>\n    <li class=\"header__switch_item\">\n        <a class=\"header__switch_item_href\" href=\"/\">\n            Услуги\n        </a>\n    </li>\n    <li class=\"header__switch_item\">\n        <a class=\"header__switch_item_href\" href=\"/\">\n            Озеленение участка\n        </a>\n    </li>\n</ul>'
+"title": "Ландшафт"
 })
+
+<div class="container">
+    <ul class="header__switch">
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/">Главная</a>
+        </li>
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/">Услуги</a>
+        </li>
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/">Озеленение участка</a>
+        </li>
+    </ul>
+</div>
 
 <section class="portfolio">
     <div class="container">
