--- a/app/pages/vacancy.html
+++ b/app/pages/vacancy.html
@@ -1,7 +1,14 @@
 @@include('../layout/header.html', {
-"title": "Ландшафт",
-"switch": '<ul class=\"header__switch\"><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Главная</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">О компании</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Вакансии</a></li></ul>'
+"title": "Ландшафт"
 })
+
+<div class="container">
+    <ul class="header__switch">
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/">Главная</a></li>
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/about.html">О компании</a></li>
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/vacancy.html">Вакансии</a></li>
+    </ul>
+</div>
 
 <div class="container">
     <section class="awards">
@@ -61,7 +68,8 @@
                                     знать правила техники безопасности
                                 </li>
                                 <li class="awards__item_item">
-                                    обладать такими качествами как ответственность, целеустремленность, внимательность, исполнительность, качествами лидера
+                                    обладать такими качествами как ответственность, целеустремленность, внимательность,
+                                    исполнительность, качествами лидера
                                 </li>
 
                             </ul>
@@ -70,7 +78,7 @@
                             </strong>
                             <ul class="awards__item_list">
                                 <li class="awards__item_item">
-                                    2/2 
+                                    2/2
                                 </li>
                                 <li class="awards__item_item">
                                     5/2
@@ -128,7 +136,7 @@
                             <ul class="awards__item_list">
                                 <li class="awards__item_item">
                                     6/1
-                                </li> 
+                                </li>
                             </ul>
                         </div>
                         <button class="awards__item_button button">
@@ -153,7 +161,8 @@
                                     Разработка и внедрение технологии по борьбе с вредителями, болезнями растений
                                 </li>
                                 <li class="awards__item_item">
-                                    Разработка мероприятий, направленных на повышение плодородия почв и увеличения урожайности сельскохозяйственных культур
+                                    Разработка мероприятий, направленных на повышение плодородия почв и увеличения
+                                    урожайности сельскохозяйственных культур
                                 </li>
                                 <li class="awards__item_item">
                                     Разработка планов, календарных графиков по уходу за посевами
@@ -181,7 +190,7 @@
                             </strong>
                             <ul class="awards__item_list">
                                 <li class="awards__item_item">
-                                    2/2 
+                                    2/2
                                 </li>
                                 <li class="awards__item_item">
                                     6/1
