--- a/app/pages/contacts.html
+++ b/app/pages/contacts.html
@@ -1,7 +1,17 @@
 @@include('../layout/header.html', {
-    "title": "Ландшафт",
-    "switch": '<ul class=\"header__switch\"><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Главная</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/contacts.html\">Контакты</a></li></ul>'
+"title": "Ландшафт"
 })
+
+<div class="container">
+    <ul class="header__switch">
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/">Главная</a>
+        </li>
+        <li class="header__switch_item">
+            <a class="header__switch_item_href" href="/contacts.html">Контакты</a>
+        </li>
+    </ul>
+</div>
 
 <div class="container">
     <section class="question-form">
@@ -20,7 +30,7 @@
                     <ul class="contacts__list">
                         <li class="contacts__item">
                             <span>
-                                ОГРН 1217700514481 
+                                ОГРН 1217700514481
                             </span>
                             <span>
                                 ИНН 9724061068
@@ -33,7 +43,8 @@
                             <span>
                                 К. 4 КВ. 124
                             </span>
-                        </li> <li class="contacts__item">
+                        </li>
+                        <li class="contacts__item">
                             <span>
                                 Россия, г. Москва, ул. Садовая, д. 35
                             </span>
