--- a/app/pages/portfolio.html
+++ b/app/pages/portfolio.html
@@ -1,7 +1,14 @@
 @@include('../layout/header.html', {
-"title": "Ландшафт",
-"switch": '<ul class=\"header__switch\"><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/\">Главная</a></li><li class=\"header__switch_item\"><a class=\"header__switch_item_href\" href=\"/portfolio.html\">Портфолио</a></li></ul>'
+    "title": "Ландшафт"
 })
+
+<div class="container">
+    <ul class="header__switch">
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/">Главная</a></li>
+        <li class="header__switch_item"><a class="header__switch_item_href" href="/portfolio.html">Портфолио</a>
+        </li>
+    </ul>
+</div>
 
 <div class="project">
     <section class="portfolio">
